# rules_python_interactive

./: MODULE.bazel  README.md
examples/: BUILD.bazel  example.py
python/: BUILD.bazel  defs.bzl  interactive.py
python/private/: py_interactive.bzl
